k8s/mariadb-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
# MariaDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: docker.io/bitnami/mariadb:11.3
        securityContext:
          runAsUser: 1001
        ports:
        - containerPort: 3306
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        volumeMounts:
        - name: mariadb-data
          mountPath: /bitnami/mariadb
      volumes:
      - name: mariadb-data
        persistentVolumeClaim:
          claimName: mariadb-data
