k8s/moodle-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  namespace: moodle
spec:
  selector:
    app: moodle
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
# Moodle Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  namespace: moodle
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle
  template:
    metadata:
      labels:
        app: moodle
    spec:
      containers:
      - name: moodle
        image: docker.io/bitnami/moodle:4.3
        ports:
        - containerPort: 80
        - containerPort: 443
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
          requests:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 2Gi
        volumeMounts:
        - name: moodle-data
          mountPath: /bitnami/moodle
        - name: moodledata-data
          mountPath: /bitnami/moodledata
      volumes:
      - name: moodle-data
        persistentVolumeClaim:
          claimName: moodle-data
      - name: moodledata-data
        persistentVolumeClaim:
          claimName: moodledata-data
